--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
+/* global css */
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Press+Start+2P&family=Roboto+Mono&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Syncopate&display=swap');
+
+:root {
+    --background1-color: #1D061A;
+    --background2-color: #FE1D4A;
+    --accent1-color: #FF9810;
+    --accent2-color: #D9D9D9;
+    --white-color: #FCFCFC;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Inter', sans-serif;
+    font-size: 1.2rem;
+    color: var(--white-color);
+    box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
+}
