Feat: Styling home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<main>
+<main id="main">
 
     <!-- Carousel -->
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
@@ -34,5 +34,9 @@
     </div>
     <!-- /Carousel -->
 
+    <!-- Division Line -->
+    <p id="p-divisionLine"><a id="a-divisionLine" href="">See all products</a> or <a id="a-divisionLine" href="">Login</a>!</p>
+    <hr>
+    <!-- /Division Line -->
 
 </main>
