--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,15 +3,23 @@
     align-items: center;
     justify-content: space-between;
     height: 5rem;
-    padding: 1rem;
+    padding: 2vh 5vw;
     background: var(--background2-color);
+}
+
+#logo {
+    height: 4rem;
+}
+
+#nav {
+    align-content: center;
 }
 
 #btn-mobile {
     background-image: url("../../assets/img/btn-mobile.png");
     background-size: contain;
-    width: 1.2rem;
-    height: 1.2rem;
+    width: 4vw;
+    height: 4vw;
     display: none;
 }
 
@@ -19,10 +27,24 @@
     display: flex;
     list-style: none;
     gap: .5rem;
+    align-content: center;
+    margin: 0;
+    padding: 0;
 }
 
 #menu a {
     padding: 1rem;
+    text-decoration: none;
+    color: var(--white-color);
+    font-weight: 700;
+    font-size: 1.2rem;
+}
+
+#menu #a-signUp {
+    color: var(--background2-color);
+    background-color: var(--white-color);
+    border-radius: 1.5rem;
+    padding: .5rem 1.5rem;
 }
 
 @media (max-width: 600px) {
