Feat: Creating and styling sign-up component

--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,11 @@
     box-sizing: border-box;
 }
 
+body, html {
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+}
+
 a {
     text-decoration: none;
 }
