Feat: Creating Model classes with its attributes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <main id="main">
 
     <!-- Carousel -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+    <div id="carouselExampleIndicators" class="carousel slide pt-3" data-bs-ride="true">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
@@ -35,7 +35,7 @@
     <!-- /Carousel -->
 
     <!-- Division Line -->
-    <p id="p-divisionLine"><a id="a-divisionLine" href="">See all products</a> or <a id="a-divisionLine" href="">Login</a>!</p>
+    <p id="p-divisionLine"><a id="a-divisionLine" routerLink="/login">See all products</a> or <a id="a-divisionLine" routerLink="/login">Login</a>!</p>
     <hr>
     <!-- /Division Line -->
 
