--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -19,7 +19,7 @@
                 <button type="submit">LOG IN</button>
             </div>
             <div class="signup">
-                <p>Doesn't have an account? <a href="">Sign Up</a></p>
+                <p>Doesn't have an account? <a routerLink="/sign-up">Sign Up</a></p>
             </div>
         </form>
     </section>
