--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -38,7 +38,7 @@
                     <button type="submit">SIGN UP</button>
                 </div>
                 <div class="signin">
-                    <p>Already have an account? <a href="">Sign In</a></p>
+                    <p>Already have an account? <a routerLink="/login">Sign In</a></p>
                 </div>
             </div>
         </form>
