--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,10 @@
 <header id="header">
-    <a href="" id="logo"><img src="../../assets/img/logo.png" alt="" id="logo"></a>
+    <a routerLink="/home" id="logo"><img src="../../assets/img/logo.png" alt="Logo" id="logo"></a>
     <nav id="nav">
         <div id="btn-mobile" (click)="toggleMenu()"></div>
         <ul id="menu">
-            <li><a id="a-login" href="">Login</a></li>
-            <li><a id="a-signUp" href="">Sign Up</a></li>
+            <li><a id="a-login" routerLink="/login">Login</a></li>
+            <li><a id="a-signUp" routerLink="/sign-up">Sign Up</a></li>
         </ul>
     </nav>
 </header>
