Feat: implementing binding with user name

--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -1,7 +1,7 @@
 <main id="main">
 
     <!-- Division Line -->
-    <p id="p-divisionLine">Hello, User!</p>
+    <p id="p-divisionLine">Hello, {{nome}}!</p>
     <hr>
     <!-- /Division Line -->
 
