--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -40,7 +40,7 @@
     font-size: 1.2rem;
 }
 
-#menu #a-signUp {
+#menu #btn-b {
     color: var(--background2-color);
     background-color: var(--white-color);
     border-radius: 1.5rem;
