--- a/src/app/sell-product/sell-product.component.html
+++ b/src/app/sell-product/sell-product.component.html
@@ -24,7 +24,7 @@
                 <select name="category" id="category">
                     <option>Category</option>
                 </select>
-                <p>Cannot find category? <a href="">Create category</a></p>
+                <p>Cannot find category? <a routerLink="/product-category">Create category</a></p>
             </div>
             <div class="label-input">
                 <label for="picture">Picture:</label>
